# my_ghost_writer

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.md+  Dockerfile  README.md  app.py  docker-compose.yaml  lite.koboldai.net  lite.koboldai.net.txt  my_ghost_writer.txt  pyproject.toml  requirements-test.txt  requirements-webserver.txt  requirements.txt  requirements_no_versions.txt  requirements_no_versions2.txt  template.env
dockerfiles/: dockerfile_my_ghost_writer_base
my_ghost_writer/: __version__.py  app.py  constants.py  custom_synonym_handler.py  exception_handlers.py  middlewares.py  pymongo_get_database.py  pymongo_operations_rw.py  pymongo_utils.py  test_parsers2.py  text_parsers.py  text_parsers2.py  thesaurus.py  type_hints.py
scripts/: create_requirements.sh  download.sh  download_file.py  install.sh  update_list_files_download.sh
static/: index-dark.css  index.css  index.html  index.js  index_dark.html  package.json  playwright.config.ts  pnpm-lock.yaml  template.env
static/tests/: setup-classic-lite.koboldai.net.json  setup-classic-lite.koboldai.net.ts  test-classic-0-lite.koboldai.net.spec.ts  test-classic-1-lite.koboldai.net.spec.ts  test-classic-2-lite.koboldai.net.spec.ts  test-classic-3-lite.koboldai.net.spec.ts  test-classic-4-lite.koboldai.net.spec.ts  test-classic-5-lite.koboldai.net.spec.ts  test-classic-desktop-0-lite.koboldai.net.spec.ts  test-classic-desktop-1-lite.koboldai.net.spec.ts  test-classic-desktop-3-lite.koboldai.net.spec.ts  test-classic-ipad-mini-0-lite.koboldai.net.spec.ts  test-classic-ipad-mini-1-lite.koboldai.net.spec.ts  test-classic-ipad-mini-3-lite.koboldai.net.spec.ts  test-classic-ipad-mini-landscape-1-lite.koboldai.net.spec.ts  test-classic-ipad11-0-lite.koboldai.net.spec.ts  test-classic-ipad11-1-lite.koboldai.net.spec.ts  test-classic-ipad11-landscape-1-lite.koboldai.net.spec.ts  test-classic-ipadpro11-0-lite.koboldai.net.spec.ts  test-classic-ipadpro11-1-lite.koboldai.net.spec.ts  test-classic-ipadpro11-landscape-1-lite.koboldai.net.spec.ts  test-classic-landascape-ipad-mini-0-lite.koboldai.net.spec.ts  test-classic-landascape-ipad-mini-3-lite.koboldai.net.spec.ts  test-classic-landscape-ipad-mini-0-lite.koboldai.net.spec.ts  test-classic-landscape-ipad-mini-1-lite.koboldai.net.spec.ts  (+28 more)
tests/: __init__.py  test_app.py  test_custom_synonym_handler.py  test_exception_handlers.py  test_pymongo_operations_rw.py  test_pymongo_utils.py  test_text_parsers.py  test_text_parsers2.py  test_thesaurus_wordnet.py
tests-prompts/: frontend-accessibility.md
(+146 files in other folders)
