[project]
name = "my-ghost-writer"
version = "0.2.1"
description = "A simple help for writers"
authors = [
    {name = "alessandro trinca tornidor",email = "alessandro@trinca.tornidor.com"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "structlog (>=25.2.0,<26.0.0)"
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry.group.webserver]
optional = true

[tool.poetry.group.webserver.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
asgi-correlation-id = "^4.3.4"

[tool.pytest.ini_options]
addopts = "--cov=my_ghost_writer --cov-report html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
