[project]
name = "my-ghost-writer"
version = "0.6.2"
description = "A simple webapp supporting writers"
authors = [
    {name = "alessandro trinca tornidor",email = "alessandro@trinca.tornidor.com"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.10,<3.14.0"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
    "uvicorn (==0.34.3)",
    "pymongo (==4.13.2)",
    "spacy (>=3.8.7,<4.0.0)",
    "pyinflect (>=0.5.1,<0.6.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"

[tool.poetry.group.webserver]
optional = true

[tool.poetry.group.webserver.dependencies]
asgi-correlation-id = "^4.3.4"
fastapi = "^0.115.12"
requests = ">=2.32.4,<3.0.0"
uvicorn = "^0.34.2"
pymongo = {extras = ["srv"], version = "^4.13.2"}

[tool.pytest.ini_options]
addopts = "--cov=my_ghost_writer --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
